# url-shortener

./: README.md
deployment/: docker-compose.yml
server/: .gitignore  main.py  pyproject.toml  requirements.txt
server/api/: models.py
server/api/models/: request.py  response.py
server/lib/service/: url_service.py
server/lib/utils/: generators.py  url.py
