[tool.poetry]
name = "server"
version = "0.1.0"
description = "Backend for the URL shortener"
authors = ["aleksandarivanovski <aleksandar.ivanovski123@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
redis = "^4.2.0"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
